--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +13,16 @@
 </head>
 <body>
     <header></header>
-    <main>
-        
+    <main class="container border border-primary mt-5">
+        <h1 class="text-center mt-4">Cronometro:</h1>
+        <div class="my-4 d-flex flex-column align-items-center">
+            <h2>00:00:00</h2>
+            <div>
+                <button class="btn btn-success btn-lg"><i class="bi bi-pause-circle"></i></button>
+                <button class="btn btn-success btn-lg"><i class="bi bi-caret-right-fill"></i></button>
+                <button class="btn btn-success btn-lg"><i class="bi bi-arrow-counterclockwise"></i></button>
+            </div>
+        </div>
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
