--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <main class="container border border-primary mt-5">
         <h1 class="text-center mt-4">Cronometro:</h1>
         <div class="my-4 d-flex flex-column align-items-center">
-            <h2>00:00:00</h2>
+            <h2><span id="minutos">00</span>:<span id="segundos">00</span><p class="text-end" id="milisegundos">00</p></h2>
             <div>
-                <button class="btn btn-success btn-lg"><i class="bi bi-pause-circle"></i></button>
-                <button class="btn btn-success btn-lg"><i class="bi bi-caret-right-fill"></i></button>
-                <button class="btn btn-success btn-lg"><i class="bi bi-arrow-counterclockwise"></i></button>
+                <button id="botonPausar" class="btn btn-success btn-lg"><i class="bi bi-pause-circle"></i></button>
+                <button id="botonIniciar" class="btn btn-success btn-lg"><i class="bi bi-caret-right-fill"></i></button>
+                <button id="botonReiniciar" class="btn btn-success btn-lg"><i class="bi bi-arrow-counterclockwise"></i></button>
             </div>
         </div>
     </main>
